check sound and video

--- a/index.html
+++ b/index.html
@@ -102,15 +102,15 @@
     <!--Media Section -->
     <h2 id="Media">Multimedia</h2>
     <p>Check out our promotional video and images from recent events:</p>
-    <video width="250px" height="135px" controls autoplay>
-      <source src="/Kdrama.mp4" />
+    <video width="250px" height="135px" controls>
+      <source src="./media/Kdrama.mp4" />
     </video>
     <br />
     <br />
-    <img src="/150x150.gif" alt="testImg" />
+    <img src="./media/150x150.gif" alt="testImg" />
     <br />
     <audio controls>
-      <source src="/Sia - Unstoppable (Lyrics)(MP3_320K) Music Ringtone.mp3" />
+      <source src="./media/Sia.mp3" />
     </audio>
 
     <!-- c-6 Contact Section-->
